k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chess-dev
  labels:
    app.kubernetes.io/name: geek-hub
