k8s/base/bot-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-engine
  labels:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: bot-engine
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: bot-engine
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
