k8s/base/login-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  labels:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: login-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: login-service
  ports:
    - name: http
      port: 3000
      targetPort: http
