k8s/base/portal-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-web
  labels:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: portal-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: portal-web
  ports:
    - name: http
      port: 80
      targetPort: http
